cabal-version: 3.0
name:          pnorm-anim
version:       0.1.0
license:       MIT
license-file:  LICENSE
author:        MorrowM
maintainer:    themorrowm@gmail.com

common warnings
  ghc-options: -Wall

executable pnorm-anim
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base         ^>=4.17.0.0
    , JuicyPixels

  hs-source-dirs:   app
  default-language: GHC2021
